--- a/.gitignore
+++ b/.gitignore
@@ -497,3 +497,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,python,pycharm+all,dotenv,venv,direnv,virtualenv,libreoffice,microsoftoffice,jetbrains,sublimetext,visualstudiocode
+
+
+# 忽略.agents/skills/目录及子目录下的所有文件
+.agents/skills/
