fix(docs-sor-maintainer): 修复 docs 门禁路径与质量计数误判
- 在 docs-quality-gate workflow 中补充仓库内 skills 路径回退，并增加 master 分支 push 触发，避免主干与 CI 环境漏检。
- 修正 doc_quality 的 unresolved_todo 统计逻辑，消除 missing claim 与 TODO 文本的重复计数，避免质量门禁误报失败。
- 新增针对 missing claim 计数边界的回归测试，确保指标与 gate 行为稳定且可复现。

--- a/.github/workflows/docs-quality-gate.yml
+++ b/.github/workflows/docs-quality-gate.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
   push:
     branches:
+      - master
       - main
 
 jobs:
@@ -33,6 +34,8 @@ jobs:
             }
           elif [ -d "$REPO_ROOT/.agents/skills/docs-sor-maintainer/scripts" ]; then
             SKILL_DIR="$REPO_ROOT/.agents/skills/docs-sor-maintainer"
+          elif [ -d "$REPO_ROOT/skills/docs-sor-maintainer/scripts" ]; then
+            SKILL_DIR="$REPO_ROOT/skills/docs-sor-maintainer"
           elif [ -d "$CODEX_HOME_RESOLVED/skills/docs-sor-maintainer/scripts" ]; then
             SKILL_DIR="$CODEX_HOME_RESOLVED/skills/docs-sor-maintainer"
           else
