feat(docs-sor-maintainer): 完成语义迁移闭环并补齐验收体系
- 新增 legacy 语义判定与迁移分流能力，支持 auto_migrate、manual_review、skip 的可追溯决策链路，并保持 fail-closed 边界。

- 扩展质量与校验门禁，纳入 semantic conflict、low confidence、structured completeness 等指标，强化文档系统反漂移约束。

- 补充回归测试矩阵与验收报告模板，覆盖 denylist 误迁移防护、幂等迁移、冲突门禁与回归基线，提升发布前可验证性。

- 同步更新运行手册与索引，确保开发、校验、验收流程在 SoR 体系内可执行且可审计。

--- a/docs/.doc-apply-report.json
+++ b/docs/.doc-apply-report.json
@@ -1,5 +1,5 @@
 {
-  "generated_at": "2026-02-21T13:00:40.075907+00:00",
+  "generated_at": "2026-02-22T04:01:11.495943+00:00",
   "root": "/Users/tompoet/AgentSkills",
   "mode": "apply-safe",
   "dry_run": false,
@@ -11,12 +11,34 @@
     "policy_language_updated": false
   },
   "summary": {
-    "total_actions": 0,
+    "total_actions": 3,
     "applied": 0,
-    "skipped": 0,
+    "skipped": 3,
     "errors": 0
   },
-  "results": [],
+  "results": [
+    {
+      "id": "A001",
+      "type": "manual_review",
+      "path": "docs/exec-plans/active/docs-sor-roadmap-v2.1-phase-d-acceptance-report.md",
+      "status": "skipped",
+      "details": "no automatic action"
+    },
+    {
+      "id": "A002",
+      "type": "manual_review",
+      "path": "docs/exec-plans/active/docs-sor-roadmap-v2.1-phase-d-test-matrix.md",
+      "status": "skipped",
+      "details": "no automatic action"
+    },
+    {
+      "id": "A003",
+      "type": "manual_review",
+      "path": "docs/references/legacy-semantic-migration-acceptance-template.md",
+      "status": "skipped",
+      "details": "no automatic action"
+    }
+  ],
   "agents_generation": {
     "status": "skipped",
     "enabled": true,
