docs(docs-sor): 新增交付预验收与反漂移执行方案
- 新增文档化实施方案，明确开发落地、预验收矩阵、门禁策略与退出条件，作为发布前统一执行基线。

- 同步更新 index、runbook、policy 与 manifest，使新方案纳入 SoR 契约并保持入口可达与规则一致。

- 更新 plan/validate/quality/facts 等审计产物，确认当前仓库在新增方案后仍满足零漂移与质量门禁。

--- a/docs/.doc-manifest.json
+++ b/docs/.doc-manifest.json
@@ -5,6 +5,7 @@
       "docs/.doc-spec.json",
       "docs/architecture.md",
       "docs/exec-plans/active/docs-sor-legacy-migration-automation-plan.md",
+      "docs/exec-plans/active/docs-sor-roadmap-v2.1-phase-e-delivery-preacceptance-anti-drift.md",
       "docs/exec-plans/active/docs-sor-roadmap-v2.1-semantic-structured-generation.md",
       "docs/exec-plans/active/docs-sor-roadmap-v2.md",
       "docs/index.md",
