feat(docs-sor-maintainer): 引入 Agent runtime 语义增强并收口V2.5
- 新增 semantic runtime report schema 与加载校验链路，支持 deterministic/hybrid/agent_strict 模式及 evidence gate。
- 扩展 doc_plan/doc_apply/doc_legacy/doc_garden/doc_validate，对 update_section/fill_claim/migrate_legacy 等动作接入语义候选、门禁与 fallback/manual_review 策略。
- 增补质量校验与测试覆盖，新增 semantic runtime 与 exec-plan closeout 相关用例，提升漂移与失配识别能力。
- 同步更新 docs policy/manifest/runbook/index 与 V2.5 closeout 文档，确保 SoR 与当前实现一致。

--- a/docs/.doc-manifest.json
+++ b/docs/.doc-manifest.json
@@ -34,6 +34,7 @@
       "docs/exec-plans/completed/docs-sor-roadmap-v2-closeout-2026-02-22.md",
       "docs/exec-plans/completed/docs-sor-roadmap-v2.3-phase-f5-closeout-2026-02-22.md",
       "docs/exec-plans/completed/docs-sor-roadmap-v2.4-closeout-2026-02-23.md",
+      "docs/exec-plans/completed/docs-sor-roadmap-v2.5-closeout-2026-02-23.md",
       "docs/glossary.md",
       "docs/references/legacy-semantic-migration-acceptance-template.md"
     ]
