--- a/docs/.doc-apply-report.json
+++ b/docs/.doc-apply-report.json
@@ -1,5 +1,5 @@
 {
-  "generated_at": "2026-02-22T14:08:50.557510+00:00",
+  "generated_at": "2026-02-23T15:44:21.155598+00:00",
   "root": "/Users/tompoet/AgentSkills",
   "mode": "apply-safe",
   "dry_run": false,
@@ -17,6 +17,42 @@
     "errors": 0
   },
   "results": [],
+  "semantic_runtime": {
+    "settings": {
+      "enabled": true,
+      "mode": "hybrid",
+      "source": "invoking_agent",
+      "runtime_report_path": "docs/.semantic-runtime-report.json",
+      "fail_closed": true,
+      "allow_fallback_template": true,
+      "allow_external_llm_api": false,
+      "max_output_chars_per_section": 4000,
+      "required_evidence_prefixes": [
+        "repo_scan.",
+        "runbook.",
+        "semantic_report."
+      ],
+      "deny_paths": [
+        "docs/adr/**"
+      ],
+      "actions": {
+        "update_section": true,
+        "fill_claim": true,
+        "migrate_legacy": true,
+        "agents_generate": true
+      }
+    },
+    "runtime": {
+      "enabled": true,
+      "mode": "hybrid",
+      "source": "invoking_agent",
+      "runtime_report_path": "docs/.semantic-runtime-report.json",
+      "available": false,
+      "entry_count": 0,
+      "error": "runtime report not found: docs/.semantic-runtime-report.json",
+      "warnings": []
+    }
+  },
   "agents_generation": {
     "status": "skipped",
     "enabled": true,
