fix(docs-sor-maintainer): 修复V2.5语义策略执行缺口并完成收口
- 为 update_section、fill_claim、semantic_rewrite 与 agents_generate 引入 agent_strict 强约束，在 runtime 缺失或 gate 失败时改为显式 error，避免错误降级继续写入。
- 将 semantic_generation 的 fail_closed、allow_fallback_template、deny_paths 落实为可执行策略，新增 fallback_blocked/path_denied/runtime_required 结果语义，确保 policy 与行为一致。
- 补充并通过严格回归测试，新增 strict/fallback/deny_paths 相关用例，覆盖关键分支并保持既有 deterministic 与 hybrid 行为不回归。
- 新增 V2.5 remediation 计划与 closeout，更新 index/runbook/policy/manifest 及验收报告，保证文档、实现与门禁结果同步一致。

--- a/docs/.doc-manifest.json
+++ b/docs/.doc-manifest.json
@@ -9,6 +9,7 @@
         "docs/exec-plans/active/docs-sor-roadmap-v2.1-phase-e-delivery-preacceptance-anti-drift.md",
         "docs/exec-plans/active/docs-sor-roadmap-v2.2-phase-f-agent-runtime-semantic-hardening.md",
         "docs/exec-plans/active/docs-sor-roadmap-v2.1-semantic-structured-generation.md",
+        "docs/exec-plans/active/docs-sor-roadmap-v2.5-remediation-agent-strict-policy-enforcement.md",
         "docs/exec-plans/active/docs-sor-roadmap-v2.5-hybrid-template-llm-governance.md",
         "docs/exec-plans/active/docs-sor-roadmap-v2.md",
         "docs/exec-plans/completed/README.md",
@@ -16,6 +17,7 @@
         "docs/exec-plans/completed/docs-sor-roadmap-v2.1-closeout-2026-02-22.md",
         "docs/exec-plans/completed/docs-sor-roadmap-v2.1-phase-e-closeout-2026-02-22.md",
         "docs/exec-plans/completed/docs-sor-roadmap-v2.2-phase-f-closeout-2026-02-22.md",
+        "docs/exec-plans/completed/docs-sor-roadmap-v2.5-remediation-closeout-2026-02-24.md",
         "docs/index.md",
         "docs/references/doc_spec_schema.md",
         "docs/runbook.md"
