--- a/docs/.doc-apply-report.json
+++ b/docs/.doc-apply-report.json
@@ -1,5 +1,5 @@
 {
-  "generated_at": "2026-02-25T02:55:15.395594+00:00",
+  "generated_at": "2026-02-26T10:44:12.211520+00:00",
   "root": "/Users/tompoet/AgentSkills",
   "mode": "apply-safe",
   "dry_run": false,
@@ -14,13 +14,24 @@
     "total_actions": 0,
     "applied": 0,
     "skipped": 0,
-    "errors": 0
+    "errors": 0,
+    "semantic_action_count": 0,
+    "semantic_attempt_count": 0,
+    "semantic_success_count": 0,
+    "fallback_count": 0,
+    "fallback_reason_breakdown": {},
+    "semantic_hit_rate": 0.0,
+    "semantic_unattempted_count": 0,
+    "semantic_exempt_count": 0,
+    "semantic_unattempted_without_exemption": 0
   },
   "results": [],
   "semantic_runtime": {
     "settings": {
       "enabled": true,
       "mode": "hybrid",
+      "prefer_agent_semantic_first": true,
+      "require_semantic_attempt": true,
       "source": "invoking_agent",
       "runtime_report_path": "docs/.semantic-runtime-report.json",
       "fail_closed": true,
@@ -38,7 +49,10 @@
       "actions": {
         "update_section": true,
         "fill_claim": true,
+        "semantic_rewrite": true,
         "migrate_legacy": true,
+        "merge_docs": true,
+        "split_doc": true,
         "agents_generate": true
       }
     },
@@ -52,6 +66,18 @@
       "error": "runtime report not found: docs/.semantic-runtime-report.json",
       "warnings": []
     }
+  },
+  "semantic_observability": {
+    "semantic_action_count": 0,
+    "semantic_attempt_count": 0,
+    "semantic_success_count": 0,
+    "fallback_count": 0,
+    "fallback_reason_breakdown": {},
+    "semantic_exempt_count": 0,
+    "semantic_unattempted_count": 0,
+    "semantic_unattempted_without_exemption": 0,
+    "semantic_hit_rate": 0.0,
+    "semantic_unattempted_samples": []
   },
   "agents_generation": {
     "status": "skipped",
