feat(docs-sor-maintainer): 完成 V2.7.1 语义优先闭环与验收收口
- 为 topology_repair 与 navigation_repair 增加 apply 执行路径，支持幂等修复、结构化结果与状态追踪
- 将 migrate_legacy 升级为 runtime semantic first，并在 agent_strict 下强制 runtime、在 hybrid 下按策略 fallback
- 扩展 semantic runtime 动作集与 source_path 匹配能力，保证新动作纳入 semantic observability 统计
- 补充 topology/navigation 与 legacy migration 相关回归测试，确保新增路径与回退语义稳定
- 在 CI 与 runbook 增加 skills 与 .agents 双副本一致性检查，并同步 V2.7.1 验收与收口文档导航

--- a/.github/workflows/docs-quality-gate.yml
+++ b/.github/workflows/docs-quality-gate.yml
@@ -42,6 +42,14 @@ jobs:
             echo "docs-sor-maintainer not found. Set SKILL_DIR or install under skills, .agents/skills or \$HOME/.codex/skills." >&2
             exit 2
           fi
+          if [ -d "$REPO_ROOT/skills/docs-sor-maintainer" ] && [ -d "$REPO_ROOT/.agents/skills/docs-sor-maintainer" ]; then
+            diff -qr \
+              --exclude='.DS_Store' \
+              --exclude='__pycache__' \
+              --exclude='*.pyc' \
+              "$REPO_ROOT/skills/docs-sor-maintainer" \
+              "$REPO_ROOT/.agents/skills/docs-sor-maintainer"
+          fi
           "$PYTHON_BIN" "$SKILL_DIR/scripts/repo_scan.py" --root "$REPO_ROOT" --output "$REPO_ROOT/docs/.repo-facts.json"
           "$PYTHON_BIN" "$SKILL_DIR/scripts/doc_plan.py" --root "$REPO_ROOT" --mode audit --facts "$REPO_ROOT/docs/.repo-facts.json" --output "$REPO_ROOT/docs/.doc-plan.json"
           "$PYTHON_BIN" "$SKILL_DIR/scripts/doc_synthesize.py" --root "$REPO_ROOT" --plan "$REPO_ROOT/docs/.doc-plan.json" --facts "$REPO_ROOT/docs/.repo-facts.json" --output "$REPO_ROOT/docs/.doc-evidence-map.json"
