--- a/docs/.doc-apply-report.json
+++ b/docs/.doc-apply-report.json
@@ -1,5 +1,5 @@
 {
-  "generated_at": "2026-02-26T10:44:12.211520+00:00",
+  "generated_at": "2026-02-26T12:09:08.569335+00:00",
   "root": "/Users/tompoet/AgentSkills",
   "mode": "apply-safe",
   "dry_run": false,
@@ -50,6 +50,8 @@
         "update_section": true,
         "fill_claim": true,
         "semantic_rewrite": true,
+        "topology_repair": true,
+        "navigation_repair": true,
         "migrate_legacy": true,
         "merge_docs": true,
         "split_doc": true,
