feat(docs-sor-maintainer): 落地 V2.7.3 输入质量分级与 scoped validate
- 为 semantic runtime 引入 A/B/C/D 输入质量分级与决策模型，新增 quality_score、quality_findings、quality_decision 等可追溯字段，稳定 runtime 消费判定。\n- 在 doc_apply 接入分级分流策略，明确 A/B 消费、C 降级、D 阻断，并补充 summary 级别的质量分布统计，提升门禁可观测性。\n- 在 doc_validate 增加 scoped validate 参数与依赖扩展逻辑，支持 links/topology/spec 影响传播与高风险自动升级 full，降低 PR 场景反馈时延且不削弱 gate。\n- 新增并扩展单测覆盖 runtime 质量决策、apply 分流与 scoped validate 行为，同时更新 runbook/index/exec-plan 验收与收口文档，确保 docs SoR 与实现同步。

--- a/docs/.doc-apply-report.json
+++ b/docs/.doc-apply-report.json
@@ -1,5 +1,5 @@
 {
-  "generated_at": "2026-02-26T12:09:08.569335+00:00",
+  "generated_at": "2026-02-26T14:19:26.523664+00:00",
   "root": "/Users/tompoet/AgentSkills",
   "mode": "apply-safe",
   "dry_run": false,
@@ -20,6 +20,9 @@
     "semantic_success_count": 0,
     "fallback_count": 0,
     "fallback_reason_breakdown": {},
+    "runtime_quality_grade_distribution": {},
+    "runtime_quality_decision_breakdown": {},
+    "runtime_quality_degraded_count": 0,
     "semantic_hit_rate": 0.0,
     "semantic_unattempted_count": 0,
     "semantic_exempt_count": 0,
@@ -56,6 +59,16 @@
         "merge_docs": true,
         "split_doc": true,
         "agents_generate": true
+      },
+      "input_quality": {
+        "enabled": true,
+        "grade_thresholds": {
+          "A": 90,
+          "B": 75,
+          "C": 60
+        },
+        "agent_strict_min_grade": "B",
+        "c_grade_decision": "fallback"
       }
     },
     "runtime": {
@@ -66,7 +79,12 @@
       "available": false,
       "entry_count": 0,
       "error": "runtime report not found: docs/.semantic-runtime-report.json",
-      "warnings": []
+      "warnings": [],
+      "quality": {
+        "enabled": true,
+        "grade_distribution": {},
+        "decision_breakdown": {}
+      }
     }
   },
   "semantic_observability": {
@@ -75,6 +93,9 @@
     "semantic_success_count": 0,
     "fallback_count": 0,
     "fallback_reason_breakdown": {},
+    "runtime_quality_grade_distribution": {},
+    "runtime_quality_decision_breakdown": {},
+    "runtime_quality_degraded_count": 0,
     "semantic_exempt_count": 0,
     "semantic_unattempted_count": 0,
     "semantic_unattempted_without_exemption": 0,
