fix(docs-sor): 加固 scoped drift 与 split_doc 路径门禁
- 修复 scoped validate 的 drift 过滤缺口，确保与作用域文档相关的 sync_manifest 动作不会被误丢弃，避免假绿放行。
- 为 split_doc 的 runtime 与 fallback 统一增加路径安全约束与声明目标校验，阻断越界写入和未声明额外目标写入，保持语义执行与 SoR 边界一致。
- 在 CI 固化关键回归用例并同步运行手册，形成固定门禁，降低同类回归再次进入 PR 的风险。

--- a/.github/workflows/docs-quality-gate.yml
+++ b/.github/workflows/docs-quality-gate.yml
@@ -54,4 +54,8 @@ jobs:
           "$PYTHON_BIN" "$SKILL_DIR/scripts/doc_plan.py" --root "$REPO_ROOT" --mode audit --facts "$REPO_ROOT/docs/.repo-facts.json" --output "$REPO_ROOT/docs/.doc-plan.json"
           "$PYTHON_BIN" "$SKILL_DIR/scripts/doc_synthesize.py" --root "$REPO_ROOT" --plan "$REPO_ROOT/docs/.doc-plan.json" --facts "$REPO_ROOT/docs/.repo-facts.json" --output "$REPO_ROOT/docs/.doc-evidence-map.json"
           "$PYTHON_BIN" "$SKILL_DIR/scripts/doc_validate.py" --root "$REPO_ROOT" --facts "$REPO_ROOT/docs/.repo-facts.json" --fail-on-drift --fail-on-freshness --output "$REPO_ROOT/docs/.doc-validate-report.json"
+          "$PYTHON_BIN" -m unittest -v \
+            skills.docs-sor-maintainer.tests.test_doc_validate_scoped.ScopedValidateTests.test_check_drift_scoped_keeps_sync_manifest_action \
+            skills.docs-sor-maintainer.tests.test_doc_apply_section_actions.DocApplySectionActionTests.test_split_doc_runtime_rejects_escape_targets_and_falls_back \
+            skills.docs-sor-maintainer.tests.test_doc_apply_section_actions.DocApplySectionActionTests.test_split_doc_runtime_rejects_undeclared_extra_targets
           "$PYTHON_BIN" -m unittest discover -s "$REPO_ROOT/skills/docs-sor-maintainer/tests" -p "test_*.py"
