--- a/docs/.doc-manifest.json
+++ b/docs/.doc-manifest.json
@@ -14,6 +14,16 @@
       "docs/exec-plans/active/docs-sor-roadmap-v2.5-remediation-agent-strict-policy-enforcement.md",
       "docs/exec-plans/active/docs-sor-roadmap-v2.6-acceptance-report.md",
       "docs/exec-plans/active/docs-sor-roadmap-v2.6-topology-progressive-disclosure-governance.md",
+      "docs/exec-plans/active/docs-sor-roadmap-v2.7-agent-first-semantic-priority-governance.md",
+      "docs/exec-plans/active/docs-sor-roadmap-v2.7-m1-acceptance-report.md",
+      "docs/exec-plans/active/docs-sor-roadmap-v2.7-m2-acceptance-report.md",
+      "docs/exec-plans/active/docs-sor-roadmap-v2.7-m3-acceptance-report.md",
+      "docs/exec-plans/active/docs-sor-roadmap-v2.7-m4-acceptance-report.md",
+      "docs/exec-plans/active/docs-sor-roadmap-v2.7-m4-test-matrix.md",
+      "docs/exec-plans/active/docs-sor-roadmap-v2.7.1-acceptance-report.md",
+      "docs/exec-plans/active/docs-sor-roadmap-v2.7.1-semantic-first-coverage-closure.md",
+      "docs/exec-plans/active/docs-sor-roadmap-v2.7.3-acceptance-report.md",
+      "docs/exec-plans/active/docs-sor-roadmap-v2.7.3-semantic-input-quality-and-scoped-validate.md",
       "docs/exec-plans/active/docs-sor-roadmap-v2.md",
       "docs/exec-plans/completed/README.md",
       "docs/exec-plans/completed/docs-sor-legacy-migration-automation-closeout-2026-02-22.md",
@@ -22,6 +32,9 @@
       "docs/exec-plans/completed/docs-sor-roadmap-v2.2-phase-f-closeout-2026-02-22.md",
       "docs/exec-plans/completed/docs-sor-roadmap-v2.5-remediation-closeout-2026-02-24.md",
       "docs/exec-plans/completed/docs-sor-roadmap-v2.6-closeout-2026-02-24.md",
+      "docs/exec-plans/completed/docs-sor-roadmap-v2.7-closeout-2026-02-26.md",
+      "docs/exec-plans/completed/docs-sor-roadmap-v2.7.1-closeout-2026-02-26.md",
+      "docs/exec-plans/completed/docs-sor-roadmap-v2.7.3-closeout-2026-02-26.md",
       "docs/index.md",
       "docs/references/doc_spec_schema.md",
       "docs/references/doc_topology_schema.md",
